# informed-ai

./: .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  geo_schedule.py  main.py  main_dev.py  pyproject.toml
backend/: Dockerfile  extract_zip.py  fetchAlerts.py  final_parse.py  requirements.txt  zip_to_county.json  zip_zone.json  zonedata.txt
backend/app/: config.py  database.py  dependencies.py  env_config.py  gptclient.py  main.py  util.py
backend/app/routers/: router.py  user_query_routes.py  user_routes.py
charts/: local.values.yaml  prod.values.yaml
charts/informed/: Chart.yaml  values.template.yaml
charts/informed/templates/: debug.yaml  (+10 more)
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: index.html  manifest.json
frontend/src/: App.js  App.tsx  index.js  index.tsx
informed/: config.py  db.py  informed.py  redis.py  scheduler.py
informed/api/: admin.py  api_types.py  app.py  chat.py  chat_query.py  health.py  notification.py  schema.py  user.py  user_query_routes.py  user_routes.py  weather.py  weather_data_routes.py
informed/chat/: manager.py
informed/db_models/: __init__.py  chat.py  notification.py  notifications.py  query.py  shared_types.py  users.py  weather.py  weather_alert.py
informed/helper/: util.py  utils.py
informed/llm/: client.py  llm.py  schema.py
informed/logger/: log_types.py  logger.py
informed/query/: manager.py
informed/services/: notification_service.py  weather_alert_service.py
informed/tools/: weatherapi_client.py
informed/users/: manager.py
migrations/: env.py  script.py.mako
migrations/helper/: utils.py
migrations/versions/: 00_aff80a3ceea8_fresh_db.py  01_6373a47b4366_add_admin_users.py  02_2de435a564bd_add_user_settings_and_remove_weather_data.py  03_a836a1102523_add_notification_table.py  08a2be4dcb48_make_user_account_type_enum.py  2de435a564bd_add_user_settings_and_remove_weather_data.py  4a18bfc8bfac_add_admin_users.py  6373a47b4366_add_admin_users.py  82d260adb00a_01_add_queries_table.py  a836a1102523_.py  d1c944af4368_00_initial_tables_for_users.py
misc/scripts/: code_validate.py  create_migration.py
nginx/: nginx.conf
(+104 files in other folders)
